Add Vitis Recipe for 2020.2